2020-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	URL line breaking.
	
	* doc/texinfo.tex (\urefbreak): Temporarily set \pretolerance
	to a negative value.
	\urefallowbreak: Increase value of penalty.
	* doc/texinfo-tex-test.texi (URL line breaking): Add another
	example.
	(Nested URL): New section.
	
	Substandard URL line breaking reported by Werner Lemberg.

2020-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	JS_WEBLABELS and JS_WEBLABELS_FILE
	
	* tp/Texinfo/Common.pm (@variable_string_settables):
	Add JS_WEBLABELS and JSWEBLABELS_FILE.
	* tp/Texinfo/Convert/HTML.pm (%defaults): Provide default values.
	(_do_jslicenses_file): Create this file according to the values of
	these variables.
	(_default_end_file): Output link to jslicense file depending on the
	values of these variables.

2020-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* TODO: Update with some bugs.

2020-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (infokey format):
	Add note that you can't effectively bind C-c.

2020-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (The Echo Area): Remove mention of using
	? for completions.

2020-10-12  Patrice Dumas  <pertusus@free.fr>

	Add mathjax test in layout coverage tests

	* tp/tests/layout/list-of-tests: add formatting_mathjax.

2020-10-12  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix test suite for non-XS.
	
	* tp/Texinfo/ParserNonXS.pm (_open_in): Use ':utf8' layer
	for UTF-8 input.  This was leading to errors in the test suite
	for Shift-JIS files.  This reverses change on 2020/05/14.

2020-10-12  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove MINI_TOC variable, using SHOW_MENU instead.
	
	* tp/Texinfo/Common.pm (@variable_string_settables):
	Remove MINI_TOC.
	* tp/Texinfo/Convert/HTML.pm (%defaults): Remove MINI_TOC
	value, and set SHOW_MENU to 'sectiontoc' to mean the same thing.
	(_convert): Make showing menu and generating a "mini-TOC" mutually